--- a/src/main/math/CMakeLists.txt
+++ b/src/main/math/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_library(PlaneMaths OBJECT gmat.cpp gvec.cpp)
-target_include_directories(PlaneMaths PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(PlaneMaths PUBLIC ${CMAKE_SOURCE_DIR}/include)
 
 install(FILES gmat.h gvec.h DESTINATION include/raycaster/math)
