--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,21 +15,15 @@ find_package(SDL_image REQUIRED)
 # Add all main directories
 set (INCLUDE_DIR "${CMAKE_SOURCE_DIR}/include")
 list(APPEND CMAKELIST_DIRS
-	"${CMAKE_SOURCE_DIR}/src/main/math")
+	"${CMAKE_SOURCE_DIR}/src/main/")
 
 # Call CMakeLists of all dirs and add created object files to list
 add_subdirectory(${CMAKELIST_DIRS})
 
 # Add include directories
-add_library(raycaster SHARED $<TARGET_OBJECTS:PlaneMaths>)
-target_include_directories(raycaster PUBLIC ${INCLUDE_DIR})
 
 # Add testing compilation
 option(COMPILE_TEST "Compile tests? " OFF)
 if(COMPILE_TEST)
 	add_subdirectory("${PROJECT_SOURCE_DIR}/src/test")
 endif()
-
-
-# Install instructions
-install(TARGETS raycaster DESTINATION lib)
