Added temporary tests

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -1,12 +1,19 @@
 # CMakeList for tests
 
 # List all include directories for testing
+set(INCLUDE_DIR "${CMAKE_SOURCE_DIR}/include")
+
 list(APPEND TESTING_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}
-	${CMAKE_CURRENT_SOURCE_DIR}
-	${CMAKE_SOURCE_DIR}/src/main/math 
-	${CMAKE_SOURCE_DIR}/src/main)
+	${INCLUDE_DIR}
+	)
 
-add_executable(Tester run_tests.cpp)
+add_library(math_tests OBJECT math/math_tests.cpp)
+target_include_directories(math_tests PUBLIC ${INCLUDE_DIR}
+	${CMAKE_CURRENT_SOURCE_DIR})
 
-target_include_directories(Tester PUBLIC TESTING_INCLUDES)
-target_link_libraries(Tester raycaster)
+add_executable(Tester run_tests.cpp
+	$<TARGET_OBJECTS:math_tests>)
+
+target_include_directories(Tester PUBLIC ${INCLUDE_DIR} )
+add_dependencies(Tester raycaster)
+target_link_libraries(Tester PUBLIC raycaster)
