New structure for math generic functions.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,4 +26,5 @@ add_subdirectory(${CMAKELIST_DIRS})
 option(COMPILE_TEST "Compile tests? " OFF)
 if(COMPILE_TEST)
 	add_subdirectory("${PROJECT_SOURCE_DIR}/src/test")
+	enable_testing()
 endif()
