Added gmat template struct + testing for simple additions.

--- a/src/main/CMakeLists.txt
+++ b/src/main/CMakeLists.txt
@@ -1,7 +1,6 @@
 set (INCLUDE_DIR ${CMAKE_SOURCE_DIR}/include)
 set (MAIN_DIR ${CMAKE_CURRENT_SOURCE_DIR})
-list (APPEND MATH_SOURCES
-	${MAIN_DIR}/math/gmat.cpp)
+list (APPEND MATH_SOURCES)
 list (APPEND PROJECT_SOURCES
 	${MATH_SOURCES})
 
