Fixed CMake error with empty lib sources and added placeholder raycasting map class.

--- a/src/main/CMakeLists.txt
+++ b/src/main/CMakeLists.txt
@@ -1,10 +1,10 @@
 set (INCLUDE_DIR ${CMAKE_SOURCE_DIR}/include)
 set (MAIN_DIR ${CMAKE_CURRENT_SOURCE_DIR})
-list (APPEND MATH_SOURCES)
+list (APPEND MAP_SOURCES ${MAIN_DIR}/map/map.cpp)
 list (APPEND PROJECT_SOURCES
 	${MATH_SOURCES})
 
-add_library(raycaster SHARED ${MATH_SOURCES})
+add_library(raycaster SHARED ${MAP_SOURCES})
 target_include_directories(raycaster PUBLIC ${INCLUDE_DIR})
 install (TARGETS raycaster 
 	ARCHIVE DESTINATION lib/
