--- a/.travis.yml
+++ b/.travis.yml
@@ -15,15 +15,16 @@ addons:
             - libsdl2-dev
             - libsdl2-image-dev
             - cmake
+            - catch2
             - g++-9
 
-before_install:
-    - git clone https://github.com/catchorg/Catch2.git
-    - cd Catch2
-    - cmake -Bbuild -H. -DBUILD_TESTING=OFF
-    - sudo cmake --build build/ --target install
+# before_install:
+#    - git clone https://github.com/catchorg/Catch2.git
+#    - cd Catch2
+#    - cmake -Bbuild -H. -DBUILD_TESTING=OFF
+#    - sudo cmake --build build/ --target install
 
-install:    
+install:
   - cd ${TRAVIS_BUILD_DIR}
 
 before_script:
