--- a/.travis.yml
+++ b/.travis.yml
@@ -18,11 +18,12 @@ addons:
             - catch2
             - g++-9
 
-# before_install:
-#    - git clone https://github.com/catchorg/Catch2.git
-#    - cd Catch2
-#    - cmake -Bbuild -H. -DBUILD_TESTING=OFF
-#    - sudo cmake --build build/ --target install
+before_install:
+    - git clone https://github.com/catchorg/Catch2.git
+    - cd Catch2
+    - git checkout v2.13.4
+    - cmake -Bbuild -H. -DBUILD_TESTING=OFF
+    - sudo cmake --build build/ --target install
 
 install:
   - cd ${TRAVIS_BUILD_DIR}
